@@ -35,128 +35,130 @@ follows, with all other control codes causing no action to be taken:</P>
 <TD Align=Center>NUL</TD>
 <TD Align=Center>000</TD>
 <TD Align=Center>00</TD>
-<TD Align=Center>Ignored on input (not stored in buffer; see full duplex
-protocol)</TD>
+<TD><P Align=Justify>Ignored on input (not stored in buffer; see full
+duplex protocol)</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>ENQ</TD>
 <TD Align=Center>005</TD>
 <TD Align=Center>05</TD>
-<TD Align=Center>Transmit answerback message</TD>
+<TD><P Align=Justify>Transmit answerback message</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>BEL</TD>
 <TD Align=Center>007</TD>
 <TD Align=Center>07</TD>
-<TD Align=Center>Sound bell tone from keyboard</TD>
+<TD><P Align=Justify>Sound bell tone from keyboard</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>BS</TD>
 <TD Align=Center>010</TD>
 <TD Align=Center>08</TD>
-<TD Align=Center>Move the cursor to the left one character position,
-unless it is at the left margin, in which case no action occurs</TD>
+<TD><P Align=Justify>Move the cursor to the left one character position,
+unless it is at the left margin, in which case no action occurs</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>HT</TD>
 <TD Align=Center>011</TD>
 <TD Align=Center>09</TD>
-<TD Align=Center>Move the cursor to the next tab stop, or to the right
-margin if no further tab stops arfe present on the line</TD>
+<TD><P Align=Justify>Move the cursor to the next tab stop, or to the right
+margin if no further tab stops arfe present on the line</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>LF</TD>
 <TD Align=Center>012</TD>
 <TD Align=Center>0A</TD>
-<TD Align=Center>This code causes a line feed or a new line operation (See
-new line mode)</TD>
+<TD><P Align=Justify>This code causes a line feed or a new line operation
+(See new line mode)</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>VT</TD>
 <TD Align=Center>013</TD>
 <TD Align=Center>0B</TD>
-<TD Align=Center>Interpreted as LF</TD>
+<TD><P Align=Justify>Interpreted as <B>LF</B></P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>FF</TD>
 <TD Align=Center>014</TD>
 <TD Align=Center>0C</TD>
-<TD Align=Center>Interpreted as LF</TD>
+<TD><P Align=Justify>Interpreted as <B>LF</B></P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>CR</TD>
 <TD Align=Center>015</TD>
 <TD Align=Center>0D</TD>
-<TD Align=Center>Move cursor to left margin on the current line</TD>
+<TD><P Align=Justify>Move cursor to left margin on the current
+line</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>SO</TD>
 <TD Align=Center>016</TD>
 <TD Align=Center>0E</TD>
-<TD Align=Center>Invoke G1 character set, as designated by <B>SCS</B>
-control sequence</TD>
+<TD><P Align=Justify>Invoke G1 character set, as designated by <B>SCS</B>
+control sequence</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>SI</TD>
 <TD Align=Center>017</TD>
 <TD Align=Center>0F</TD>
-<TD Align=Center>Invoke G0 character set, as designated by <B>ESC (</B>
-control sequence</TD>
+<TD><P Align=Justify>Invoke G0 character set, as designated by <B>ESC
+(</B> control sequence</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>XON</TD>
 <TD Align=Center>021</TD>
 <TD Align=Center>11</TD>
-<TD Align=Center>Causes terminal to resume transmission</TD>
+<TD><P Align=Justify>Causes terminal to resume transmission</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>XOFF</TD>
 <TD Align=Center>022</TD>
 <TD Align=Center>12</TD>
-<TD Align=Center>Causes terminal to stop transmission of all codes except
-XOFF and XON</TD>
+<TD><P Align=Justify>Causes terminal to stop transmission of all codes
+except <B>XOFF</B> and <B>XON</B></P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>CAN</TD>
 <TD Align=Center>030</TD>
 <TD Align=Center>18</TD>
-<TD Align=Center>If sent during a control sequence, the sequence is
+<TD><P Align=Justify>If sent during a control sequence, the sequence is
 immediately terminated and not executed. It also causes the error
-character to be displayed</TD>
+character to be displayed</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>SUB</TD>
 <TD Align=Center>032</TD>
 <TD Align=Center>1A</TD>
-<TD Align=Center>Interpreted as <B>CAN</B></TD>
+<TD><P Align=Justify>Interpreted as <B>CAN</B></P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>ESC</TD>
 <TD Align=Center>033</TD>
 <TD Align=Center>1B</TD>
-<TD Align=Center>Introduces a control sequence</TD>
+<TD><P Align=Justify>Aborts any control sequence in progress, and
+introduces a control sequence</P></TD>
 </TR>
 
 <TR>
 <TD Align=Center>DEL</TD>
 <TD Align=Center>177</TD>
 <TD Align=Center>7F</TD>
-<TD Align=Center>Ignored on input, not stored in input buffer</TD>
+<TD><P Align=Justify>Ignored on input, not stored in input buffer</P></TD>
 </TR>
 
 </Table>
@@ -193,33 +195,71 @@ ANSI X-3.41 1974:</P>
 
 <Table Border=1 Width=95%>
 
-</Table>
-
 <TR>
-<TH Width=10%>Name</TH>
-<TH Width=10%>Host to<BR>VT100</TH>
-<TH Width=10%>VT100<BR>to Host</TH>
-<TH Width=60%>Description</TH>
-<TH Width=10%>Default<BR>Value</TH>
+<TH Align=Center Width=5%>Name</TH>
+<TH Align=Center Width=5%>Host to<BR>VT100</TH>
+<TH Align=Center Width=5%>VT100<BR>to Host</TH>
+<TH Align=Center Width=20%>Sequence</TH>
+<TH Align=Center Width=55%>Description</TH>
+<TH Align=Center Width=10%>Default<BR>Value</TH>
 </TR>
 
 <TR>
 <TH Align=Center>CPR</TH>
-<TH Align=Center>&nbsp;</TH>
-<TH Align=Center>*</TH>
-<TH Align=Center>Cursor Position Report</TH>
-<TH Align=Center>1</TH>
+<TD Align=Center>&nbsp;</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Pn</I> ; <I>Pn</I> R</TD>
+<TD Align=Center>Cursor Position Report</TD>
+<TD Align=Center>N/A</TD>
 </TR>
 
 <TR>
-<TD Align=Center>CUB</TD>
+<TH Align=Center>CUB</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Pn</I> D</TD>
 <TD Align=Center>Cursor Backward</TD>
 <TD Align=Center>1</TD>
 </TR>
 
 <TR>
+<TH Align=Center>CUD</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Pn</I> B</TD>
+<TD Align=Center>Cursor Down</TD>
+<TD Align=Center>1</TD>
+</TR>
+
+<TR>
+<TH Align=Center>CUF</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Pn</I> C</TD>
+<TD Align=Center>Cursor Forward</TD>
+<TD Align=Center>1</TD>
+</TR>
+
+<TR>
+<TH Align=Center>CUP</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>&nbsp;</TD>
+<TD Align=Center>ESC [ <I>Pn</I> ; <I>Pn</I> H</TD>
+<TD Align=Center>Cursor Position</TD>
+<TD Align=Center>1 ; 1</TD>
+</TR>
+
+<TR>
+<TH Align=Center>CUU</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Pn</I> A</TD>
+<TD Align=Center>Cursor Up</TD>
+<TD Align=Center>1</TD>
+</TR>
+
+<TR>
+<TH Align=Center></TH>
 <TD Align=Center></TD>
 <TD Align=Center></TD>
 <TD Align=Center></TD>
@@ -227,21 +267,7 @@ ANSI X-3.41 1974:</P>
 <TD Align=Center></TD>
 </TR>
 
-<TR>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-</TR>
-
-<TR>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-<TD Align=Center></TD>
-</TR>
+</Table>
 
 </Center>
 
